--- a/.github/workflows/weather-logger.yml
+++ b/.github/workflows/weather-logger.yml
@@ -2,19 +2,24 @@ name: Weather Logger (4x Daily)
 
 on:
   schedule:
-    # Runs 4 times daily: 8 AM, 2 PM, 6 PM, 10 PM ET (during DST)
-    # UTC times below: 12:00, 18:00, 22:00, 02:00
+    # 8 AM, 2 PM, 6 PM, 10 PM ET (DST). UTC: 12:00, 18:00, 22:00, 02:00
     - cron: '0 12,18,22 * * *'
     - cron: '0 2 * * *'
-  workflow_dispatch: # Allows manual triggering
+  workflow_dispatch:
 
 jobs:
   log-weather:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Weather Logging
+      - name: POST /functions/cronTrigger
         run: |
-          curl -X POST "${{ secrets.APP_DOMAIN }}/functions/cronTrigger" \
+          set -e
+          BASE="${{ secrets.APP_DOMAIN }}"
+          BASE="${BASE%/}"
+          echo "POST $BASE/functions/cronTrigger"
+          curl -i -X POST "$BASE/functions/cronTrigger" \
             -H "Content-Type: application/json" \
             -H "User-Agent: GitHub-Actions-WeatherLogger/1.0" \
-            --fail --silent --show-error
+            -d '{}' \
+            --silent --show-error --fail
+          echo "✅ cronTrigger responded"
