--- a/.github/workflows/master-scheduler.yml
+++ b/.github/workflows/master-scheduler.yml
@@ -2,7 +2,7 @@ name: Lawn AI Master Scheduler
 
 on:
   schedule:
-    - cron: '* * * * *'   # every minute
+    - cron: '* * * * *'   # every minute; your app decides what to do
   workflow_dispatch:
 
 concurrency:
@@ -13,14 +13,22 @@ jobs:
   trigger-app-tasks:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger cron (prefer /api, fallback /functions; require 2xx JSON)
+      - name: Trigger cron (try both domains & common paths; require 2xx JSON)
         env:
           BASE: ${{ secrets.APP_DOMAIN }}
-          AUTH: ${{ secrets.BASE44_API_KEY }}   # optional if your app requires it
+          ALT: ${{ secrets.ALT_APP_DOMAIN }}            # optional second domain
+          AUTH: ${{ secrets.BASE44_API_KEY }}           # optional if your app requires it
         run: |
           set -euo pipefail
-          BASE="${BASE%/}"
           mkdir -p _resp
+
+          trim() { printf "%s" "$1" | awk '{$1=$1};1'; }
+          BASE="$(trim "${BASE:-}")"; ALT="$(trim "${ALT:-}")"
+          BASE="${BASE%/}"; ALT="${ALT%/}"
+
+          if [ -z "$BASE" ]; then echo "❌ APP_DOMAIN is empty"; exit 1; fi
+          DOMAINS=("$BASE")
+          if [ -n "$ALT" ] && [ "$ALT" != "$BASE" ]; then DOMAINS+=("$ALT"); fi
 
           try_url () {
             URL="$1"
@@ -42,23 +50,32 @@ jobs:
             return 1
           }
 
-          # Try likely function routes (with & without trailing slash)
-          CANDIDATES=(
-            "$BASE/api/cronTrigger"
-            "$BASE/api/cronTrigger/"
-            "$BASE/functions/cronTrigger"
-            "$BASE/functions/cronTrigger/"
-            "$BASE/api/cron"
-            "$BASE/api/cron/"
+          # Common function routes some stacks use
+          PATHS=( \
+            "/api/cronTrigger" \
+            "/api/cron" \
+            "/functions/cronTrigger" \
+            "/cronTrigger" \
+            "/cron/trigger" \
+            "/cron" \
           )
 
-          for U in "${CANDIDATES[@]}"; do
-            if try_url "$U"; then
-              exit 0
-            fi
+          for D in "${DOMAINS[@]}"; do
+            D="${D%/}"
+            echo "=== Trying domain: $D ==="
+            for P in "${PATHS[@]}"; do
+              if try_url "$D$P"; then
+                echo "✅ Matched at $D$P"
+                exit 0
+              fi
+              # also try trailing slash
+              if try_url "$D$P/"; then
+                echo "✅ Matched at $D$P/"
+                exit 0
+              fi
+            done
           done
 
-          echo "❌ No 2xx JSON from known routes."
-          echo "Tip: Set APP_DOMAIN to the exact env Base44 updated (Preview vs App),"
-          echo "     or paste the precise endpoint path from the Automation Setup page."
+          echo "❌ No 2xx JSON from any tried route/domain."
+          echo "Tip: Copy the exact endpoint from Base44's Automation Setup and replace PATHS above."
           exit 1
