--- a/.github/workflows/weather-logger.yml
+++ b/.github/workflows/weather-logger.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Trigger Weather Logging
         run: |
-          curl -X GET "\${{ secrets.APP_DOMAIN }}/functions/cronTrigger" \
+          curl -X GET "${{ secrets.APP_DOMAIN }}/functions/cronTrigger" \
             -H "User-Agent: GitHub-Actions-WeatherLogger/1.0" \
-            -H "X-Cron-Token: \${{ secrets.CRON_TOKEN }}" \
+            -H "X-Cron-Token: ${{ secrets.CRON_TOKEN }}" \
             --fail --silent --show-error --max-time 20 --retry 3 --retry-all-errors
