--- a/.github/workflows/task-scheduler.yml
+++ b/.github/workflows/task-scheduler.yml
@@ -1,8 +1,8 @@
-name: Task Scheduler (Daily Tests)
+name: Task Scheduler (Reports + Tests)
 
 on:
   schedule:
-    # Runs every 5 minutes (GitHub Actions minimum)
+    # Runs every 5 minutes
     - cron: '*/5 * * * *'
   workflow_dispatch: # Allows manual triggering
 
@@ -14,9 +14,9 @@ jobs:
       group: task-scheduler
       cancel-in-progress: true
     steps:
-      - name: Ping taskScheduler
+      - name: Ping fiveMinuteScheduler
         run: |
-          curl -X GET "${{ secrets.APP_DOMAIN }}/functions/taskScheduler" \
+          curl -X GET "${{ secrets.APP_DOMAIN }}/functions/fiveMinuteScheduler" \
             -H "User-Agent: GitHub-Actions-TaskScheduler/1.0" \
             -H "X-Cron-Token: ${{ secrets.CRON_TOKEN }}" \
             --fail --silent --show-error --max-time 20 --retry 3 --retry-all-errors
