--- a/.github/workflows/.github/workflows/task-scheduler.yml
+++ b/.github/workflows/.github/workflows/task-scheduler.yml
@@ -1,22 +1,5 @@
-name: Task Scheduler (Reports + Tests)
-
-on:
-  schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
-  workflow_dispatch: # Allows manual triggering
-
-jobs:
-  check-scheduled-tasks:
-    runs-on: ubuntu-latest
-    timeout-minutes: 2
-    concurrency:
-      group: task-scheduler
-      cancel-in-progress: true
-    steps:
-      - name: Ping fiveMinuteScheduler
-        run: |
-          curl -X GET "${{ secrets.APP_DOMAIN }}/functions/fiveMinuteScheduler" \
-            -H "User-Agent: GitHub-Actions-TaskScheduler/1.0" \
-            -H "X-Cron-Token: ${{ secrets.CRON_TOKEN }}" \
-            --fail --silent --show-error --max-time 20 --retry 3 --retry-all-errors
+name: Task Scheduler (Reports + Tests) on: schedule: - cron: "*/5 * * * *" # every 5 minutes (UTC) workflow_dispatch: {} # allow manual runs permissions: contents: read concurrency: group: "task-scheduler" cancel-in-progress: false jobs: check-scheduled-tasks: runs-on: ubuntu-latest timeout-minutes: 5 steps: - name: Ping fiveMinuteScheduler run: | set -e curl -i -L -X GET "${{ secrets.APP_DOMAIN }}/functions/fiveMinuteScheduler"
+-H "Accept: application/json"
+-H "User-Agent: GH-Actions Cron"
+-H "X-Cron-Token: ${{ secrets.CRON_TOKEN }}"
+--fail --silent --show-error --max-time 25 --retry 3 --retry-all-errors
